Add optimized Solana PumpFun copy trading bot in Rust

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ base64 = "0.22.1"
 rand = "0.8.5"
 borsh = { version = "1.5.3"}
 borsh-derive = "1.5.3"
+solana_trade_sdk = "0.1.0"
 colored = "3.0.0"
 reqwest = { version = "0.11.27", features = ["json", "socks", "native-tls"] }
 lazy_static = "1.5.0"
@@ -40,3 +41,4 @@ tracing = "0.1.40"
 futures-util = "0.3.30"
 maplit = "1.0.2"
 futures = "0.3.31"
+solana-program = "1.18.11"
